feat(project): 优化本地启动并支持站点多域名编辑
